# TASK-20260318-71725A

./: .gitignore  metadata.json
repo/: .env.example  .gitignore  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh
repo/.tmp/: delivery_acceptance_architecture_audit.md  delivery_acceptance_audit.md  delivery_architecture_audit.md  delivery_architecture_audit_latest.md  static-audit-report.md  static_audit_report.md  static_audit_report_20260422.md  static_audit_report_20260422_review.md  static_delivery_architecture_audit_20260422.md
repo/alembic/: env.py
repo/alembic/versions/: 20260421_01_initial.py  20260421_02_immutable_audit.py  20260421_03_remediations.py  20260421_04_global_uniqueness.py  20260422_01_remediation_final.py  20260422_03_remediation_suite.py  (+9 more)
repo/app/: main.py
repo/deploy/: nginx.conf
repo/scripts/: backup_db.py  generate_certs.py  restore_db.py  verify_remediation.py
repo/tests/: conftest.py  fail2.txt  fail3.txt  failure.txt  test_audit_business_flows.py  test_audit_desensitization.py  test_audit_final_fixes.py  test_audit_final_verification.py  test_audit_remediation.py  test_audit_remediation_v2.py  test_data_governance.py  test_export_integration.py  test_export_service.py  test_health.py  test_hospital_advanced.py  test_hospital_auth_fix.py  test_idempotency_concurrency.py  test_invitation_binding.py  test_password_validation.py  test_patient_phone_number.py  test_process_routing.py  test_remediation_verification.py  test_security_audit.py  test_storage_import.py  utils.py
(+43 files in other folders)
